--- a/SCUM/Config/ServerSettings.ini
+++ b/SCUM/Config/ServerSettings.ini
@@ -1,7 +1,7 @@
 
 [General]
-scum.ServerName=SCUM Server
-scum.ServerDescription=Server Description
+scum.ServerName=Pelican SCUM
+scum.ServerDescription=A Pelican Hosted Server
 scum.ServerPassword=
 scum.MaxPlayers=64
 scum.ServerBannerUrl=
